--- a/Python-Script/requirements.txt
+++ b/Python-Script/requirements.txt
@@ -1,10 +1,5 @@
-matplotlib==3.0.2
-numpy==1.25.2
-scikit-learn==0.18.1
-scipy==1.11.1
-pandas==2.0.3
-seaborn==0.13.0
-streamlit==1.28.2
-babel==2.13.1
-
-python -m streamlit run your_script.py
+streamlit
+matplotlib
+pandas
+seaborn
+babel
